--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Luckiest+Guy&display=swap');
 
+@font-face {
+    font-family: "Comic Sans MS";
+    src: url("./assets/fonts/COMIC.TTF");
+    font-display: swap;
+}
+
 .text-stroke {
     -webkit-text-stroke: 1px white;
 }
