image convert png to webp

--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,16 @@
     font-display: swap;
 }
 
+input[type="number"]::-webkit-outer-spin-button,
+input[type="number"]::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+input[type="number"] {
+    -moz-appearance: textfield;
+}
+
 .text-stroke {
     -webkit-text-stroke: 1px white;
 }
