--- a/src/App.css
+++ b/src/App.css
@@ -45,3 +45,9 @@ input[type="number"] {
         @apply !mx-0
     }
 }
+
+@media (min-width:1440px) {
+    .ml-xl-8 {
+        @apply -ml-8
+    }
+}
